Fixed a bug about the sidebar icons is not aligned in y axis.

--- a/src/styles/components/_sidebar-menus.scss
+++ b/src/styles/components/_sidebar-menus.scss
@@ -3,7 +3,7 @@
   transition: $transition-background;
 
   .va-icon {
-    vertical-align: -0.2em;
+    vertical-align: -4px !important;
     margin-right: 5px;
   }
 
